--- a/TooL/index.html
+++ b/TooL/index.html
@@ -2,11 +2,12 @@
 <title> BoPL </title>
 <body>
 <font face="Georgia" size="10">
-<marquee> BenchMarking of Programming Languages </marquee> </font> 
+<marquee> </marquee>
+BenchMarking of Programming Languages  </font> 
 <br>
 <br>
-<button type="button"> <a href="overview.html"><font size="6"> Overview </font> </a></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<button type="button"> <a href="specifications.html"><font size="6"> Specifications </font> </a></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<button type="button"> <a href="introduction.html"><font size="6"> Introduction </font> </a></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<button type="button"> <a href="specification.html"><font size="6"> Specifications </font> </a></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <button type="button"> <a href="language.html"><font size="6"> Language Details </font> </a></button><br>
 <button type="button"> <a href="source.html"><font size="6"> Source Programs </font> </a></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <button type="button"> <a href="results.html"><font size="6"> Results </font> </a></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
