--- a/TooL/language.html
+++ b/TooL/language.html
@@ -5,12 +5,12 @@
 <marquee> Language Details </marquee> </font> 
 <br>
 <br>
-<button type="button"> <a href="c_stats.html"><font size="6"> C </font> </a></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<button type="button"> <a href="cpp_stats.html"><font size="6"> C++ </font> </a></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<button type="button"> <a href="java_stats.html"><font size="6"> JAVA </font> </a></button><br>
-<button type="button"> <a href="haskell_stats.html"><font size="6"> Haskell </font> </a></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<button type="button"> <a href="python_stats.html"><font size="6"> Python </font> </a></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<button type="button"> <a href="cython_stats.html"><font size="6"> Cython </font> </a></button>
+<button type="button"> <a href="c.html"><font size="6"> C </font> </a></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<button type="button"> <a href="cpp.html"><font size="6"> C++ </font> </a></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<button type="button"> <a href="java.html"><font size="6"> JAVA </font> </a></button><br>
+<button type="button"> <a href="haskell.html"><font size="6"> Haskell </font> </a></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<button type="button"> <a href="python.html"><font size="6"> Python </font> </a></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<button type="button"> <a href="cython.html"><font size="6"> Cython </font> </a></button>
 
 </body>
 </html>
